basic word wrap in doc comment

--- a/public/date.rb.html
+++ b/public/date.rb.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width">
     <style>
       body {
         max-width: 42rem;
@@ -17,6 +17,7 @@
       code {
       color:lightsteelblue;
       }
+      code pre {word-wrap: break-word;}
       code:hover {color:black;}
       footer {
       margin:0 auto;
