doc comment writes out md file

--- a/public/date.rb.html
+++ b/public/date.rb.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="alternate" type="text/markdown" href="date.rb.md">
     <style>
       body {
         max-width: 42rem;
@@ -29,7 +30,7 @@
       font-weight:bold;
       font-size:2rem;}
     </style>
-    <title>doc:comment</title>
+    <title>./lib/monkey_patching/date.rb</title>
   </head>
   <body><code title='Line 1, ./lib/monkey_patching/date.rb'><pre>1 class Date
 </pre></code><h1>A monkey patched Ruby date class to handle UK Parliament specific day types.</h1>
