absurd dark mode for doc comment

--- a/public/date.rb.html
+++ b/public/date.rb.html
@@ -29,6 +29,10 @@
       color:crimson;
       font-weight:bold;
       font-size:2rem;}
+      
+      @media (prefers-color-scheme: dark) {
+body {color:white;background-color:black;}
+}
     </style>
     <title>./lib/monkey_patching/date.rb</title>
   </head>
