--- a/public/calculator_controller.rb.html
+++ b/public/calculator_controller.rb.html
@@ -2,7 +2,8 @@
 <html lang="en-GB">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width">
+    <link rel="alternate" type="text/markdown" href="calculator_controller.rb.md">
     <style>
       body {
         max-width: 38rem;
@@ -11,183 +12,133 @@
         font-family: system-ui;
         color: black;
         background-color: white;
-        font-size:larger;
       }
       p {line-height: 1.4;}
       code {
       color:lightsteelblue;
       }
+      code pre {word-wrap: break-word;}
+      code:hover {color:black;}
       footer {
       margin:0 auto;
       color:gray;
       display:table;
       }
       footer big {
-      color:crimson;
-      font-weight:bold;
       font-size:2rem;}
+      
+      @media (prefers-color-scheme: dark) {
+body {color:white;background-color:black;}
+}
     </style>
-    <title>doc:comment</title>
+    <title>app/controllers/calculator_controller.rb</title>
   </head>
-  <body><h1>Calculator controller to build the form and run the calculations.</h1>
-<p>Individual calculations for different flavours of instrument are packaged into separate files. This code requires those files to be loaded.</p>
-<pre><code>require &#39;calculations/bicameral_parliamentary_days&#39;
-</code></pre>
-<pre><code>require &#39;calculations/bicameral_first_to_ten&#39;
-</code></pre>
-<pre><code>require &#39;calculations/commons_praying_days&#39;
-</code></pre>
-<pre><code>require &#39;calculations/bicameral_praying_days_either_house_sitting&#39;
-</code></pre>
-<pre><code>require &#39;calculations/bicameral_praying_days_both_houses_sitting&#39;
-</code></pre>
-<pre><code>require &#39;calculations/treaty_period_a&#39;
-</code></pre>
-<pre><code>require &#39;calculations/commons_parliamentary_days&#39;
-</code></pre>
-<h2>The controller itself.</h2>
-<pre><code>class CalculatorController &lt; ApplicationController
-</code></pre>
-<p>Include code from each of the modules for the different styles of calculation.</p>
-<pre><code>  include CALCULATION_BICAMERAL_PARLIAMENTARY_DAYS
-</code></pre>
-<pre><code>  include CALCULATION_BICAMERAL_FIRST_TO_TEN
-</code></pre>
-<pre><code>  include CALCULATION_COMMONS_PRAYING_DAYS
-</code></pre>
-<pre><code>  include CALCULATION_BICAMERAL_PRAYING_DAYS_EITHER_HOUSE_SITTING
-</code></pre>
-<pre><code>  include CALCULATION_BICAMERAL_PRAYING_DAYS_BOTH_HOUSES_SITTING
-</code></pre>
-<pre><code>  include CALCULATION_TREATY_PERIOD_A
-</code></pre>
-<pre><code>  include CALCULATION_COMMONS_PARLIAMENTARY_DAYS
-</code></pre>
-<h3>This is the code to provide information for the form that users can fill in.</h3>
-<pre><code>  def index
-</code></pre>
-<p>Set a title for the page.</p>
-<pre><code>    @title = &quot;Calculate scrutiny periods&quot;
-</code></pre>
-<p>Find all the active procedures in display order - to populate the procedure radio buttons on the form.</p>
-<pre><code>    @procedures = Procedure.all.where( &#39;active is true&#39; ).order( &#39;display_order asc&#39;)
-</code></pre>
-<pre><code>  end
-</code></pre>
-<h3>When the user has pressed &#39;Calculate&#39;, this code runs the calculation.</h3>
-<pre><code>  def calculate
-</code></pre>
-<p>Set a title for the page.</p>
-<pre><code>      @title = &quot;Calculated scrutiny period&quot;
-</code></pre>
-<p>In order to calculate the scrutiny period, we need:</p>
-<ul>
+  <body><a name="top"></a><a name='1'></a> <h1>Calculator controller to build the form and run the calculations.</h1>
+<a name='3'></a> <p>Individual calculations for different flavours of instrument are packaged into separate files. This code requires those files to be loaded.</p>
+<code title='Line 4, app/controllers/calculator_controller.rb'><pre><a name='4'>4</a> require 'calculations/bicameral_parliamentary_days'
+</pre></code><code title='Line 5, app/controllers/calculator_controller.rb'><pre><a name='5'>5</a> require 'calculations/bicameral_first_to_ten'
+</pre></code><code title='Line 6, app/controllers/calculator_controller.rb'><pre><a name='6'>6</a> require 'calculations/commons_praying_days'
+</pre></code><code title='Line 7, app/controllers/calculator_controller.rb'><pre><a name='7'>7</a> require 'calculations/bicameral_praying_days_either_house_sitting'
+</pre></code><code title='Line 8, app/controllers/calculator_controller.rb'><pre><a name='8'>8</a> require 'calculations/bicameral_praying_days_both_houses_sitting'
+</pre></code><code title='Line 9, app/controllers/calculator_controller.rb'><pre><a name='9'>9</a> require 'calculations/treaty_period_a'
+</pre></code><code title='Line 10, app/controllers/calculator_controller.rb'><pre><a name='10'>10</a> require 'calculations/commons_parliamentary_days'
+</pre></code><a name='12'></a> <h2>The controller itself.</h2>
+<code title='Line 13, app/controllers/calculator_controller.rb'><pre><a name='13'>13</a> class CalculatorController < ApplicationController
+</pre></code><a name='15'></a> <p>Include code from each of the modules for the different styles of calculation.</p>
+<code title='Line 16, app/controllers/calculator_controller.rb'><pre><a name='16'>16</a>   include CALCULATION_BICAMERAL_PARLIAMENTARY_DAYS
+</pre></code><code title='Line 17, app/controllers/calculator_controller.rb'><pre><a name='17'>17</a>   include CALCULATION_BICAMERAL_FIRST_TO_TEN
+</pre></code><code title='Line 18, app/controllers/calculator_controller.rb'><pre><a name='18'>18</a>   include CALCULATION_COMMONS_PRAYING_DAYS
+</pre></code><code title='Line 19, app/controllers/calculator_controller.rb'><pre><a name='19'>19</a>   include CALCULATION_BICAMERAL_PRAYING_DAYS_EITHER_HOUSE_SITTING
+</pre></code><code title='Line 20, app/controllers/calculator_controller.rb'><pre><a name='20'>20</a>   include CALCULATION_BICAMERAL_PRAYING_DAYS_BOTH_HOUSES_SITTING
+</pre></code><code title='Line 21, app/controllers/calculator_controller.rb'><pre><a name='21'>21</a>   include CALCULATION_TREATY_PERIOD_A
+</pre></code><code title='Line 22, app/controllers/calculator_controller.rb'><pre><a name='22'>22</a>   include CALCULATION_COMMONS_PARLIAMENTARY_DAYS
+</pre></code><a name='24'></a> <h3>This is the code to provide information for the form that users can fill in.</h3>
+<code title='Line 25, app/controllers/calculator_controller.rb'><pre><a name='25'>25</a>   def index
+</pre></code><a name='27'></a> <p>Set a title for the page.</p>
+<code title='Line 28, app/controllers/calculator_controller.rb'><pre><a name='28'>28</a>     @title = "Calculate scrutiny periods"
+</pre></code><a name='30'></a> <p>Find all the active procedures in display order - to populate the procedure radio buttons on the form.</p>
+<code title='Line 31, app/controllers/calculator_controller.rb'><pre><a name='31'>31</a>     @procedures = Procedure.all.where( 'active is true' ).order( 'display_order asc')
+</pre></code><code title='Line 32, app/controllers/calculator_controller.rb'><pre><a name='32'>32</a>   end
+</pre></code><a name='34'></a> <h3>When the user has pressed &#39;Calculate&#39;, this code runs the calculation.</h3>
+<code title='Line 35, app/controllers/calculator_controller.rb'><pre><a name='35'>35</a>   def calculate
+</pre></code><a name='37'></a> <p>Set a title for the page.</p>
+<code title='Line 38, app/controllers/calculator_controller.rb'><pre><a name='38'>38</a> 	  @title = "Calculated scrutiny period"
+</pre></code><a name='40'></a> <p>In order to calculate the scrutiny period, we need:</p>
+<a name='42'></a> <ul>
 <li>the <strong>type of the procedure</strong> itself, which we refer to by a number</li>
 </ul>
-<pre><code>    procedure = params[&#39;procedure&#39;].to_i if params[&#39;procedure&#39;]
-</code></pre>
-<ul>
-<li>the <strong>start date</strong>, for example: &quot;2020-05-06&quot;</li>
+<code title='Line 43, app/controllers/calculator_controller.rb'><pre><a name='43'>43</a>     procedure = params['procedure'].to_i if params['procedure']
+</pre></code><a name='45'></a> <ul>
+<li>the <strong>start date</strong>, for example: <q>2020-05-06</q></li>
 </ul>
-<pre><code>    start_date = params[&#39;start-date&#39;]
-</code></pre>
-<ul>
+<code title='Line 46, app/controllers/calculator_controller.rb'><pre><a name='46'>46</a>     start_date = params['start-date']
+</pre></code><a name='48'></a> <ul>
 <li>the <strong>day count</strong></li>
 </ul>
-<pre><code>    day_count = params[&#39;day-count&#39;]
-</code></pre>
-<p>Check that all the parameters have been provided by the form ...</p>
-<pre><code>    if start_date.blank? or day_count.blank? or day_count.to_i == 0 or procedure.nil?
-</code></pre>
-<p>... if not, set an error message ...</p>
-<pre><code>        @title = &quot;Sorry, there was not enough information provided.&quot;
-</code></pre>
-<p>... and display the error.</p>
-<pre><code>      render :template =&gt; &#39;calculator/not_enough_information&#39;
-</code></pre>
-<p>If the form did provide all the required information, do the calculation:</p>
-<pre><code>    else
-</code></pre>
-<ul>
+<code title='Line 49, app/controllers/calculator_controller.rb'><pre><a name='49'>49</a>     day_count = params['day-count']
+</pre></code><a name='51'></a> <p>Check that all the parameters have been provided by the form ...</p>
+<code title='Line 52, app/controllers/calculator_controller.rb'><pre><a name='52'>52</a>     if start_date.blank? or day_count.blank? or day_count.to_i == 0 or procedure.nil?
+</pre></code><a name='54'></a> <p>... if not, set an error message ...</p>
+<code title='Line 55, app/controllers/calculator_controller.rb'><pre><a name='55'>55</a> 	    @title = "Sorry, there was not enough information provided."
+</pre></code><a name='57'></a> <p>... and display the error.</p>
+<code title='Line 58, app/controllers/calculator_controller.rb'><pre><a name='58'>58</a>       render :template => 'calculator/not_enough_information'
+</pre></code><a name='60'></a> <p>If the form did provide all the required information, do the calculation:</p>
+<code title='Line 61, app/controllers/calculator_controller.rb'><pre><a name='61'>61</a>     else
+</pre></code><a name='63'></a> <ul>
 <li>find the procedure</li>
 </ul>
-<pre><code>      @procedure = Procedure.find( procedure )
-</code></pre>
-<ul>
+<code title='Line 64, app/controllers/calculator_controller.rb'><pre><a name='64'>64</a>       @procedure = Procedure.find( procedure )
+</pre></code><a name='66'></a> <ul>
 <li>the <strong>number of days</strong> to count</li>
 </ul>
-<pre><code>      @day_count = day_count.to_i
-</code></pre>
-<ul>
+<code title='Line 67, app/controllers/calculator_controller.rb'><pre><a name='67'>67</a>       @day_count = day_count.to_i
+</pre></code><a name='69'></a> <ul>
 <li>make the text of the date passed into a date format</li>
 </ul>
-<pre><code>      @start_date = Date.parse( start_date )
-</code></pre>
-<p>To calculate the <strong>anticipated end date</strong>, we select the calculation based on the type of procedure:</p>
-<pre><code>      case @procedure.id
-</code></pre>
-<ul>
+<code title='Line 70, app/controllers/calculator_controller.rb'><pre><a name='70'>70</a>       @start_date = Date.parse( start_date )
+</pre></code><a name='72'></a> <p>To calculate the <strong>anticipated end date</strong>, we select the calculation based on the type of procedure:</p>
+<code title='Line 73, app/controllers/calculator_controller.rb'><pre><a name='73'>73</a>       case @procedure.id
+</pre></code><a name='75'></a> <ul>
 <li>Legislative Reform Orders, Localism Orders and Public Bodies Orders</li>
 </ul>
-<pre><code>      when 1, 2, 4
-</code></pre>
-<pre><code>        @end_date = bicameral_parliamentary_days_calculation( @start_date, @day_count )
-</code></pre>
-<ul>
+<code title='Line 76, app/controllers/calculator_controller.rb'><pre><a name='76'>76</a>       when 1, 2, 4
+</pre></code><code title='Line 77, app/controllers/calculator_controller.rb'><pre><a name='77'>77</a>         @end_date = bicameral_parliamentary_days_calculation( @start_date, @day_count )
+</pre></code><a name='79'></a> <ul>
 <li>Proposed Statutory Instrument (PNSI)</li>
 </ul>
-<pre><code>      when 3
-</code></pre>
-<pre><code>        @end_date = bicameral_first_to_ten_calculation( @start_date, @day_count )
-</code></pre>
-<ul>
+<code title='Line 80, app/controllers/calculator_controller.rb'><pre><a name='80'>80</a>       when 3
+</pre></code><code title='Line 81, app/controllers/calculator_controller.rb'><pre><a name='81'>81</a>         @end_date = bicameral_first_to_ten_calculation( @start_date, @day_count )
+</pre></code><a name='83'></a> <ul>
 <li>Commons only negative Statutory Instrument and some made affirmatives</li>
 </ul>
-<pre><code>      when 5, 7
-</code></pre>
-<pre><code>        @end_date = commons_praying_days_calculation( @start_date, @day_count )
-</code></pre>
-<ul>
+<code title='Line 84, app/controllers/calculator_controller.rb'><pre><a name='84'>84</a>       when 5, 7
+</pre></code><code title='Line 85, app/controllers/calculator_controller.rb'><pre><a name='85'>85</a>         @end_date = commons_praying_days_calculation( @start_date, @day_count )
+</pre></code><a name='87'></a> <ul>
 <li>Commons and Lords negative Statutory Instrument or a Commons and Lords affirmative Statutory Instrument where either House is sitting</li>
 </ul>
-<pre><code>      when 6, 9
-</code></pre>
-<pre><code>        @end_date = bicameral_praying_days_calculation_either_house_sitting( @start_date, @day_count ) 
-</code></pre>
-<ul>
+<code title='Line 88, app/controllers/calculator_controller.rb'><pre><a name='88'>88</a>       when 6, 9
+</pre></code><code title='Line 89, app/controllers/calculator_controller.rb'><pre><a name='89'>89</a>         @end_date = bicameral_praying_days_calculation_either_house_sitting( @start_date, @day_count ) 
+</pre></code><a name='91'></a> <ul>
 <li>Commons and Lords affirmative Statutory Instrument where both Houses are sitting</li>
 </ul>
-<pre><code>      when 8
-</code></pre>
-<pre><code>        @end_date = bicameral_praying_days_calculation_both_houses_sitting( @start_date, @day_count )
-</code></pre>
-<ul>
+<code title='Line 92, app/controllers/calculator_controller.rb'><pre><a name='92'>92</a>       when 8
+</pre></code><code title='Line 93, app/controllers/calculator_controller.rb'><pre><a name='93'>93</a>         @end_date = bicameral_praying_days_calculation_both_houses_sitting( @start_date, @day_count )
+</pre></code><a name='95'></a> <ul>
 <li>Treaty period A</li>
 </ul>
-<pre><code>      when 10
-</code></pre>
-<pre><code>        @end_date = treaty_period_a_calculation( @start_date, @day_count )
-</code></pre>
-<ul>
+<code title='Line 96, app/controllers/calculator_controller.rb'><pre><a name='96'>96</a>       when 10
+</pre></code><code title='Line 97, app/controllers/calculator_controller.rb'><pre><a name='97'>97</a>         @end_date = treaty_period_a_calculation( @start_date, @day_count )
+</pre></code><a name='99'></a> <ul>
 <li>Treaty period B</li>
 </ul>
-<pre><code>      when 11
-</code></pre>
-<pre><code>        @end_date = commons_parliamentary_days_calculation( @start_date, @day_count )
-</code></pre>
-<ul>
+<code title='Line 100, app/controllers/calculator_controller.rb'><pre><a name='100'>100</a>       when 11
+</pre></code><code title='Line 101, app/controllers/calculator_controller.rb'><pre><a name='101'>101</a>         @end_date = commons_parliamentary_days_calculation( @start_date, @day_count )
+</pre></code><a name='103'></a> <ul>
 <li>Otherwise set an error message.</li>
 </ul>
-<pre><code>      else
-</code></pre>
-<pre><code>        @error_message = &quot;Sorry, this procedure is not currently supported.&quot;
-</code></pre>
-<pre><code>      end
-</code></pre>
-<pre><code>    end
-</code></pre>
-<pre><code>  end
-</code></pre>
-<pre><code>end
-</code></pre>
-<footer><p><big>&times;&times;&times;</big></p></footer></body></html>
+<code title='Line 104, app/controllers/calculator_controller.rb'><pre><a name='104'>104</a>       else
+</pre></code><code title='Line 105, app/controllers/calculator_controller.rb'><pre><a name='105'>105</a>         @error_message = "Sorry, this procedure is not currently supported."
+</pre></code><code title='Line 106, app/controllers/calculator_controller.rb'><pre><a name='106'>106</a>       end
+</pre></code><code title='Line 107, app/controllers/calculator_controller.rb'><pre><a name='107'>107</a>     end
+</pre></code><code title='Line 108, app/controllers/calculator_controller.rb'><pre><a name='108'>108</a>   end
+</pre></code><code title='Line 109, app/controllers/calculator_controller.rb'><pre><a name='109'>109</a> end</pre></code><footer><p><big><a href="#top">&times;&times;&times;</a></big></p></footer></body></html>
