--- a/public/bicameral_praying_days_both_houses_sitting.rb.html
+++ b/public/bicameral_praying_days_both_houses_sitting.rb.html
@@ -40,39 +40,38 @@ body {color:white;background-color:black;}
 <code title='Line 6, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='6'>6</a>   def bicameral_praying_days_calculation_both_houses_sitting( date, target_day_count )
 </pre></code><a name='8'></a> <h2>We start counting on the <strong>first day when both Houses have a praying day</strong>.</h2>
 <a name='9'></a> <p>This may include the laying day of the instrument.</p>
-<a name='10'></a> <p>Unless the laying day is a joint praying day ...</p>
+<a name='10'></a> <p>Unless the laying day is a joint praying day, then ...</p>
 <code title='Line 11, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='11'>11</a>     unless date.is_joint_praying_day?
-</pre></code><a name='13'></a> <p>If there is a future praying day in the Commons or the Lords</p>
-<a name='14'></a> <p>... we look for the next joint praying day. If there is a subsequent joint praying day ...</p>
-<code title='Line 15, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='15'>15</a>       if date.first_joint_praying_day
-</pre></code><a name='17'></a> <p>... we set the date to that day.</p>
-<code title='Line 18, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='18'>18</a>         date = date.first_joint_praying_day
-</pre></code><a name='20'></a> <p>If we didn&#39;t find a <strong>future joint praying day</strong> in our calendar, we can&#39;t calculate the scrutiny period, ...</p>
-<code title='Line 21, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='21'>21</a>       else
-</pre></code><a name='23'></a> <p>... this error message is displayed ...</p>
-<code title='Line 24, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='24'>24</a>         @error_message = "Unable to find a future praying day in the House of Commons and the House of Lords. It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
-</pre></code><a name='26'></a> <p>... and we stop looking for a scrutiny period end date.</p>
-<code title='Line 27, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='27'>27</a>         return
-</pre></code><code title='Line 28, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='28'>28</a>       end
-</pre></code><a name='30'></a> <p>Otherwise, we&#39;ve established the laying day is a joint praying day so we don&#39;t have to cycle through the calendar to find a subsequent one.</p>
-<code title='Line 31, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='31'>31</a>     end
-</pre></code><a name='33'></a> <p>We&#39;ve found the first joint praying day so we start counting from day 1.</p>
-<code title='Line 34, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='34'>34</a>     day_count = 1
-</pre></code><a name='36'></a> <h2>Whilst the number of joint praying days we’re counting is less than the target number of days to count ...</h2>
-<code title='Line 37, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='37'>37</a>     while ( day_count < target_day_count ) do
-</pre></code><a name='39'></a> <p>... continue to the <strong>next day</strong>.</p>
-<code title='Line 40, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='40'>40</a>       date = date.next_day
-</pre></code><a name='42'></a> <p>... and add 1 to the day count if this is a joint praying day.</p>
-<code title='Line 43, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='43'>43</a>       day_count +=1 if date.is_joint_praying_day?
-</pre></code><a name='45'></a> <p>... if the calendar has no record of what type of day this is, we can&#39;t calculate the end date, ...</p>
-<code title='Line 46, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='46'>46</a>       if date.is_calendar_not_populated?
-</pre></code><a name='48'></a> <p>... this error message is displayed to users ...</p>
-<code title='Line 49, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='49'>49</a>         @error_message = "It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
-</pre></code><a name='51'></a> <p>... and we stop looking through the calendar.</p>
-<code title='Line 52, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='52'>52</a>         break
-</pre></code><code title='Line 53, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='53'>53</a>       end
-</pre></code><code title='Line 54, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='54'>54</a>     end
-</pre></code><a name='56'></a> <p>Return the anticipated end date of the scrutiny period for display.</p>
-<code title='Line 57, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='57'>57</a>     date
-</pre></code><code title='Line 58, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='58'>58</a>   end
-</pre></code><code title='Line 59, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='59'>59</a> end</pre></code><footer><p><big><a href="#top">&times;&times;&times;</a></big></p></footer></body></html>
+</pre></code><a name='13'></a> <p>... if there is a future joint praying day ...</p>
+<code title='Line 14, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='14'>14</a>       if date.first_joint_praying_day
+</pre></code><a name='16'></a> <p>... we set the date to that day.</p>
+<code title='Line 17, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='17'>17</a>         date = date.first_joint_praying_day
+</pre></code><a name='19'></a> <p>If we didn&#39;t find a <strong>future joint praying day</strong> in our calendar, we can&#39;t calculate the scrutiny period, ...</p>
+<code title='Line 20, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='20'>20</a>       else
+</pre></code><a name='22'></a> <p>... this error message is displayed ...</p>
+<code title='Line 23, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='23'>23</a>         @error_message = "Unable to find a future praying day in the House of Commons and the House of Lords. It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
+</pre></code><a name='25'></a> <p>... and we stop looking for a scrutiny period end date.</p>
+<code title='Line 26, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='26'>26</a>         return
+</pre></code><code title='Line 27, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='27'>27</a>       end
+</pre></code><a name='29'></a> <p>Otherwise, we&#39;ve established the laying day is a joint praying day so we don&#39;t have to cycle through the calendar to find a subsequent one.</p>
+<code title='Line 30, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='30'>30</a>     end
+</pre></code><a name='32'></a> <p>We&#39;ve found the first joint praying day so we start counting from day 1.</p>
+<code title='Line 33, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='33'>33</a>     day_count = 1
+</pre></code><a name='35'></a> <h2>Whilst the number of joint praying days we’re counting is less than the target number of days to count ...</h2>
+<code title='Line 36, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='36'>36</a>     while ( day_count < target_day_count ) do
+</pre></code><a name='38'></a> <p>... continue to the <strong>next day</strong>.</p>
+<code title='Line 39, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='39'>39</a>       date = date.next_day
+</pre></code><a name='41'></a> <p>... and add 1 to the day count if this is a joint praying day.</p>
+<code title='Line 42, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='42'>42</a>       day_count +=1 if date.is_joint_praying_day?
+</pre></code><a name='44'></a> <p>... if the calendar has no record of what type of day this is, we can&#39;t calculate the end date, ...</p>
+<code title='Line 45, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='45'>45</a>       if date.is_calendar_not_populated?
+</pre></code><a name='47'></a> <p>... this error message is displayed to users ...</p>
+<code title='Line 48, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='48'>48</a>         @error_message = "It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
+</pre></code><a name='50'></a> <p>... and we stop looking through the calendar.</p>
+<code title='Line 51, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='51'>51</a>         break
+</pre></code><code title='Line 52, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='52'>52</a>       end
+</pre></code><code title='Line 53, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='53'>53</a>     end
+</pre></code><a name='55'></a> <p>Return the anticipated end date of the scrutiny period for display.</p>
+<code title='Line 56, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='56'>56</a>     date
+</pre></code><code title='Line 57, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='57'>57</a>   end
+</pre></code><code title='Line 58, app/controllers/calculations/bicameral_praying_days_both_houses_sitting.rb'><pre><a name='58'>58</a> end</pre></code><footer><p><big><a href="#top">&times;&times;&times;</a></big></p></footer></body></html>
